[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/entitiesSpawner.gd" type="Script" id=2]
[ext_resource path="res://scripts/audioManager.gd" type="Script" id=4]
[ext_resource path="res://audio/Robbero_-_Soul_sister.ogg" type="AudioStream" id=5]
[ext_resource path="res://audio/AlexBeroza_-_Drive.ogg" type="AudioStream" id=6]

[node name="arena" type="YSort"]

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="entitiesSpawner" type="Node" parent="."]
script = ExtResource( 2 )

[node name="lootboxSpawnTimer" type="Timer" parent="entitiesSpawner"]
wait_time = 10.0
autostart = true

[node name="boomboxSpawnTimer" type="Timer" parent="entitiesSpawner"]
wait_time = 30.0
autostart = true

[node name="enemySpawnTimer" type="Timer" parent="entitiesSpawner"]
wait_time = 3.0
autostart = true

[node name="audioManager" type="Node" parent="."]
script = ExtResource( 4 )

[node name="sister" type="AudioStreamPlayer" parent="audioManager"]
stream = ExtResource( 5 )
volume_db = -22.0
autoplay = true

[node name="drive" type="AudioStreamPlayer" parent="audioManager"]
stream = ExtResource( 6 )
volume_db = -72.0
autoplay = true
bus = "Second"
[connection signal="timeout" from="entitiesSpawner/lootboxSpawnTimer" to="entitiesSpawner" method="_on_lootboxSpawnTimer_timeout"]
[connection signal="timeout" from="entitiesSpawner/enemySpawnTimer" to="entitiesSpawner" method="_on_enemySpawnTimer_timeout"]
